--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -5,15 +5,18 @@ development:
 
   # Secret tokens. Generate them with `rake secret`
   secret_key: ""
+  devise_secret_key: ""
 
 test:
   <<: *defaults
 
   # Secret tokens. Generate them with `rake secret`
   secret_key: ""
+  devise_secret_key: ""
 
 production:
   <<: *defaults
 
   # Secret tokens. Generate them with `rake secret`
   secret_key: ""
+  devise_secret_key: ""
